Continued working on frontend for messages and chats, started the createChat page
